--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
                 
             </div>
         </section>
+
+        <section class="experiencias-nueva-york mt-5">
+            <h2 class="text-3xl font-bold text-gray-800 mt-5 mx-2 mb-3">Experiencias en Nueva York</h2>
+            
+        </section>
+
+
+
     </div><!-- container -->
 </body>
 </html>
